# speq-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mvp-integration.yml  pr-title.yml  release.yml
docs/: HOMEBREW_RELEASE.md  PHASE1_BACKLOG.md
scripts/: generate_homebrew_formula.sh
src/: lib.rs  main.rs
src/cli/: discovery.rs  doctor.rs  files.rs  init.rs  list.rs  mod.rs  report.rs  run.rs  validate.rs
src/coverage/: mod.rs
src/fixtures/: mod.rs
src/generator/: mod.rs
src/manifest/: mod.rs
src/parser/: mod.rs
src/runner/: mod.rs
tests/: cli_smoke.rs  discovery_regression.rs  doctor_regression.rs  init_regression.rs  manifest_regression.rs  parser_regression.rs  report_regression.rs  results_contract_regression.rs  run_regression.rs
tests/fixtures/contracts/results/: v1.json
tests/fixtures/in-repo-mode/.speq/environments/: ci.yaml
