[package]
name = "speq-cli"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Open-source CLI runtime for speq"
license = "MIT"

[[bin]]
name = "speq"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
regex = "1"
jsonschema = "0.18"
